bugfix align

--- a/src/styles/edit.less
+++ b/src/styles/edit.less
@@ -1,6 +1,7 @@
 @edit-styles-border-color: #d7dde4;
 @edit-styles-border-color-dark: #52626d;
 @edit-output-item-span: 180px;
+@edit-output-item-margin: 185px;
 @edit-modal-item-span: 120px;
 @edit-output-line-width: 475px;
 
@@ -61,7 +62,7 @@
 
                 .button-add-item {
                     background-color: #13ce66;
-                    margin: 10px 0 0 @edit-output-item-span;
+                    margin: 10px 0 0 @edit-output-item-margin;
                     border: 1px solid #13ce66;
                     color: #fff;
                 }
@@ -93,7 +94,7 @@
                 }
 
                 .style-name-info {
-                    padding: 5px 0 0 @edit-output-item-span;
+                    padding: 5px 0 0 @edit-output-item-margin;
                 }
             }
         
